--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 #container {
     display: flex;
     background-color: #2d3e4f;
-    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100vw;
+    height: 5vh;
 }
 
 body {
@@ -9,20 +11,59 @@ body {
 }
 
 
-.carré1 {
+.box1 {
     background-color: #39cb74;
-    width: 80vw;
-    height: 5vh;
+    width: 80%;
 }
 
-.carré2 {
+.box2 {
     background-color: #2f81b7;
-    width: 20vw;
-    height: 5vh;
+    width: 20%;
 }
 
-.carré3 {
+#container2 {
+    display: flex;
+    width: 100vw;
+}
+
+.box3 {
     background-color: #e54d42;
-    width: 33vw;
+    width: 40%;
+}
+
+#container3 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    height: 20vh;
+}
+
+.box4 {
+    background-color: #e47e30;
+    width: 50%;
+    height: 10vh;
+}
+
+.box5 {
+    background-color: #95a5a6;
+    width: 50%;
+    height: 10vh;
+}
+
+.box6 {
+    background-color: #f19b2c;
+    width: 34%;
+    height: 10vh;
+}
+
+.box7 {
+    background-color: #239f85;
+    width: 33%;
+    height: 10vh;
+}
+
+.box8 {
+    background-color: #d15419;
+    width: 33%;
     height: 10vh;
 }
